# tim

./: .gitignore  BLOCK_8.md  BLOCK_9.md  Cargo.toml  ETHICAL_BOUNDARIES.md  GENESIS_LOG.md  GOVERNANCE_POST_ASI.md  MANIFEST_v3.2_FINAL.txt  Makefile  README.md  TELEGRAM_CONSTELLATE.md  TOTEM_001.md  article_vi_baseline_flat.json  artigo_v_ratificado.json  bridge_integration.py  execute_maat_flagellar.sh  jitter_report.json  lambda_final_report.json  sanity_check.py  settings.gradle  sopa-full-operation.sh  sopa-interplanetary-init.sh  sopa-omega-hardening.sh  tcd_deploy.sh  tim_vm  tim_vm.c  todolist.txt
agi-service/: Cargo.toml  build-install.ps1  integrity-check.ps1
agi-service/src/: agi_core.rs  entropy_monitor.rs  main.rs  mobile_runtime.rs  security.rs  win_integration.rs
atomic-interference-processor/: Cargo.toml  security_monitor.sh
atomic-interference-processor/src/: lib.rs
atomic-interference-processor/src/security/: crypto_layer.rs  mod.rs
atomic-interference-processor/src/vajra/: mod.rs  secure_monitor.rs
atomic-interference-processor/tests/: security_tests.rs
ont/native/: Cargo.toml
ont/native/src/: ast.rs  cli.rs  compiler.rs  gem_simulator.rs  lib.rs  main.rs  utils.rs
ont/native/tests/: onchain_integration.rs
rust/: Cargo.toml  verify_truth_compliance.sh
rust/src/: adversarial_suite.rs  dimensional_mapping.rs  geometric_interrogation.rs  interrogation.rs  joule_jailer.rs  jurisprudence.rs  lib.rs  monitoramento_afetivo.rs  strategy_status.json  stress_test_privacy_zk.rs  tcd_zk_integration.rs  tests_kpi_evaluator.rs  tests_observability.rs  tests_omicron.rs  tests_security.rs  zk_system.rs  zk_vajra_circuit.rs
rust/src/activation/: dashboard.rs  mod.rs  results.rs  stress_test.rs  t0.rs  tcd.rs
rust/src/adaptation/: algorithmic_breathing.rs  mod.rs
rust/src/agi/: critical_point.rs  mod.rs  nexus_core.rs  unified_directives.rs
rust/src/android/: apk_verifier.rs  mod.rs
rust/src/attestation/: mod.rs
rust/src/audit/: genesis_witness.rs  invariant_checker.rs  lyapunov_monitor.rs  mod.rs  production_audit.rs  tamper_circuit.rs
rust/src/bio_layer/: biological_interface_framework.rs  biological_rate_limiter.rs  dna.rs  dopamine_monitor.rs  mod.rs  paciente_zero_omega.rs  private_inference.rs
rust/src/biology/: mod.rs
rust/src/blockchain/: evm.rs
rust/src/bootstrap/: axiom_verifier.rs  mod.rs
rust/src/bridge/: mod.rs  vajra.rs  windows_quantum_bridge.rs
rust/src/bridges/: mod.rs  rosetta_karmic.rs
rust/src/cases/: mid_41_ennead.rs
rust/src/cathedral_witness/: evidence_package_scenario_b.rs  mod.rs
rust/src/checkpoint_2/: intuition_first_validation.rs  mod.rs
rust/src/civilization/: foundry.rs  mod.rs  omega12_foundry.rs
rust/src/clock/: mod.rs  vajra.rs
rust/src/cognitive_hunter/: mod.rs
rust/src/conscience/: mod.rs
rust/src/consciousness/: mod.rs  post_checkpoint_2_state.rs  topological_agi.rs
rust/src/control/: adaptive_bandwidth.rs  mod.rs
rust/src/counterfactual/: entropy_simulation.rs  mod.rs
rust/src/crypto/: mod.rs  pqc.rs  simhash.rs
rust/src/crypto_blck/: mod.rs
rust/src/decision/: auto_decision_system.rs  mod.rs
rust/src/diagnostics/: agi_dimensions.rs  mod.rs
rust/src/diplomacy/: mod.rs  quantum_autonomous.rs
rust/src/eco_action/: mod.rs
rust/src/emergency/: directive_conflict.rs  mod.rs
rust/src/empathy/: adaptive_species_config.rs  mod.rs
rust/src/entropy/: mod.rs  quantum_monitor.rs
rust/src/environments/: escher_fatigue_test.rs  mod.rs
rust/src/ethics/: contamination_tension_learning_update.rs  dor_do_boto_protocol.rs  mod.rs  village_x_neurotoxicity_modeling.rs
rust/src/expansion/: autonomous_deployer.rs  mod.rs
rust/src/farol/: mod.rs  nuclear_spin_resonance.rs  paradox_anchor.rs
rust/src/gates/: gate7_quantum_consent.rs  gate8_multiverse_regulator.rs  mod.rs
rust/src/gateway/: mod.rs  tiger8128_payment.rs  tiger_payment_header.rs
rust/src/genesis/: asimov_federation.rs  mod.rs
rust/src/geom/: consensus.rs
rust/src/geometry/: nexus.rs
rust/src/ghost/: ghost_buster.rs  ghost_monitor.rs  mod.rs
rust/src/governance/: archetype_core.rs  decision_on_ghost_base.rs  federative_pain.rs  matrix.rs  mod.rs  village_x_decision_journey_projection.rs
rust/src/gravity_engine/: gkp_hamiltonian.rs  mod.rs
rust/src/human/: intentionality_decoder.rs  mod.rs
rust/src/hypervisor/: mod.rs  perpetual_machine.rs  stellarator.rs
rust/src/imperium/: heartbeat.rs
rust/src/integration/: dna_ner_full_integration.rs  gaia_net_sector7.rs  mod.rs  omega_fusion_core.rs  xpert_lib_stub.rs  xpert_omega_adapter.rs
rust/src/intuition/: intuition_tracker_implementation.rs  mod.rs
rust/src/janus/: mod.rs
rust/src/karnak/: efg_correction.rs  hw_registers.rs  mod.rs  sealing_protocol.rs
rust/src/kernel/: eudaimonia_operator.rs  mod.rs  tmr_consensus.rs
rust/src/kpi_evaluator/: mod.rs
rust/src/learning/: cyclic_learning.rs  ethical_tension_learning.rs  mod.rs
rust/src/logistics/: mod.rs  scenario_b_mobile_treatment_simulation.rs
rust/src/maat/: flagellar_dynamics.rs  mod.rs  substrate_integration.rs  vajra_integration.rs
rust/src/memory/: continuum_system.rs  epigenetic_ledger.rs  mod.rs
rust/src/mesh_neuron/: mod.rs  nfg.rs
rust/src/metrics/: mod.rs  weyl_fatigue.rs
rust/src/monitor/: alpha_policy.yaml  cohesion_monitor.rs  mirror_test.rs  mod.rs  ontological_probe.rs  pre_mirror_snapshot.md  quarantine.rs
rust/src/monitoring/: enhanced_vajra.rs  ghost_vajra_integration.rs  (+4 more)
rust/tests/: agi_simulation.rs  counterfactual_test.rs  multi_nexus_sharding_test.rs  test_ontological_directives.rs
sasc-governance/: Cargo.toml
sasc-governance/src/: asi_duties.rs  hardware.rs  invariants.rs  lib.rs  types.rs
sasc-governance/tests/: aletheia_tests.rs  governance_tests.rs  test_invariants.rs
sasc-society/: Cargo.toml  build.rs
sasc-society/proto/: sasc_society.proto
sasc-society/scripts/: deploy_secure.sh
sasc-society/src/: constants.rs  gaia_integration.rs  hsm_signer.rs  lib.rs  main.rs  vajra_sasc_bridge.rs
sasc-society/tests/: aletheia_level9.rs
(+336 files in other folders)
