[package]
name = "sasc_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = "0.21.1"
log = "0.4"
sha3 = "0.10.8"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
thiserror = "1.0"
blake3 = "1.5"
tokio = { version = "1", features = ["full"] }
sasc-governance = { path = "../sasc-governance", features = ["cathedral", "eip712", "bio-extraction"] }
zeroize = { version = "1.7", features = ["zeroize_derive"] }

[features]
sat = []
zeroize = ["zeroize/zeroize_derive"]
