[package]
name = "sasc_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = "0.21.1"
log = "0.4"
sha3 = "0.10.8"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
thiserror = "1.0"
blake3 = "1.5"
tokio = { version = "1", features = ["full"] }
nalgebra = "0.32"
ndarray = "0.15"
num-complex = "0.4"
aws-nitro-enclaves-cose = "0.5.2"
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
sasc-governance = { path = "../sasc-governance", features = ["cathedral", "eip712", "bio-extraction"] }
lazy_static = "1.4"
serde_json = "1.0"
once_cell = "1.18"
zeroize = { version = "1.8", features = ["derive", "zeroize_derive"] }
rsa = "0.9"
sha2 = "0.10"
pkcs1 = "0.7"
x509-parser = "0.16"
zip = "0.6"
base64 = "0.21"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[[bin]]
name = "trajectory_generator"
path = "src/bin/trajectory_generator.rs"

[[bin]]
name = "tiger_init_hardened"
path = "src/bin/tiger_init_hardened.rs"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"
overflow-checks = true

[profile.release.package."*"]
opt-level = 3
overflow-checks = true

[features]
sat = []
zeroize = ["zeroize/zeroize_derive"]
