[package]
name = "sasc-governance"
version = "15.0.0"
edition = "2021"

[dependencies]
zeroize = { version = "1.7", features = ["zeroize_derive"] }
ed25519-dalek = "2.1"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
hex = "0.4"

[features]
cathedral = []
eip712 = []
bio-extraction = []
