[package]
name = "sasc-society"
version = "30.10.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
blake3 = "1.5"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
thiserror = "1.0"
log = "0.4"
rayon = "1.8"
ndarray = "0.15"
rand = "0.8"
async-trait = "0.1"
pqcrypto-kyber = "0.6"
hex = "0.4"
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
tower = { version = "0.4", features = ["limit", "util"] }
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
tokio-stream = { version = "0.1", features = ["net"] }
uuid = { version = "1.0", features = ["v4"] }
vajra-entropy-monitor = { path = "../vajra-entropy-monitor" }
karnak-proto = { path = "../karnak-proto" }

[build-dependencies]
tonic-build = "0.10"
