[package]
name = "ontology-lang"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
indoc = "2.0"
hex = "0.4"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
ethers = { version = "2.0", features = ["solc"] }
tempfile = "3.10"
sha2 = "0.10"

[features]
onchain = []
