[package]
name = "ontology-lang"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
indoc = "2.0"
hex = "0.4"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
ethers = { version = "2.0", features = ["solc"] }
log = "0.4"
env_logger = "0.10"
serde_json = "1.0"
tempfile = "3.8"
sha2 = "0.10"
warp = "0.3"
futures-util = "0.3"
rand = "0.8"

[features]
onchain = []
